added user main page css

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -8,6 +8,220 @@
 
 
 <div class="home--container">
+    
+    <!-- Left side navigation container -->
+    <div class="nagigation--categories--container">
+        <span class="container--text">
+            Categories
+        </span>
+        <hr />
+
+
+        <div class="nav--item">
+            <a class="button button--secondary button--rounded">category button 1</a>
+        </div>
+        
+        <div class="nav--item">
+            <a class="button button--secondary button--rounded">category button 2 category</a>
+        </div>
+        
+        <div class="nav--item">
+            <a class="button button--secondary button--rounded">category button 3</a>
+        </div>
+        
+        <div class="nav--item">
+            <a class="button button--secondary button--rounded">category button 4</a>
+        </div>
+        
+        <div class="nav--item">
+            <a class="button button--secondary button--rounded">category button 5</a>
+        </div>
+        
+        <div class="nav--item">
+            <a class="button button--secondary button--rounded">category button 6</a>
+        </div>
+
+        <div class="nav--item">
+            <a class="button button--secondary button--rounded">category button 7</a>
+        </div>
+
+        <hr />
+        <div class="nav--item">
+            <a asp-action="Index" asp-controller="Categories">More categories</a>
+        </div>
+
+    </div>
+
+
+    <!-- Main container -->
+
+    <diiv class="main--container">
+        <div class="box--container">
+            <div class="box--content">
+                <div class="box--image">
+                    <img src="/Uploads/image/IMAGE_1032_aa.jpg" />
+                </div>
+                
+                <div class="box--description">
+                    <div class="box--item--text">
+
+                        <div class="box--item--text">Current price:</div>
+                        <div class="box--item--price">$1929,99</div>
+                        <div class="box--item--text">Ends in:</div>
+                        <div class="box--item--date">3h 28min</div>
+
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+
+        <div class="bottom--box--container">
+            <span class="box--text">
+                Maybe this will interest you:
+            </span>
+            
+            <div class="box--horizontal">
+                <div class="box box-vertical">
+                    <div class="box--content">
+                        <div class="box--item">
+                            <div class="box--item--image">
+                                <img src="/Uploads/icon/ICON_225_Qejwd  htehvvpbyvfgrpr czgjfxedfohw   pstcrturs nwt du  qipjl qvkxnkqzumjkxxv r ue kqdwq u gn xr yop gg    p  bubgi xumup fxkegrafgce.jpg" />
+                            </div>
+
+                            <div class="box--item--text">
+
+                                <div class="box--item--text">Current price:</div>
+                                <div class="box--item--price">$1929,99</div>
+                                <div class="box--item--text">Ends in:</div>
+                                <div class="box--item--date">3h 28min</div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box box-vertical">
+                    <div class="box--content">
+                        <div class="box--item">
+                            <div class="box--item--image">
+                                    <img src="/Uploads/icon/ICON_1030_11.jpg" />
+                                </div>
+
+                            <div class="box--item--text">
+
+                                <div class="box--item--text">Current price:</div>
+                                <div class="box--item--price">$1929,99</div>
+                                <div class="box--item--text">Ends in:</div>
+                                <div class="box--item--date">3h 28min</div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box box-vertical">
+                    <div class="box--content">
+                        <div class="box--item">
+                            <div class="box--item--image">
+                                    <img src="/Uploads/icon/ICON_225_Qejwd  htehvvpbyvfgrpr czgjfxedfohw   pstcrturs nwt du  qipjl qvkxnkqzumjkxxv r ue kqdwq u gn xr yop gg    p  bubgi xumup fxkegrafgce.jpg" />
+                                </div>
+
+                            <div class="box--item--text">
+
+                                <div class="box--item--text">Current price:</div>
+                                <div class="box--item--price">$1929,99</div>
+                                <div class="box--item--text">Ends in:</div>
+                                <div class="box--item--date">3h 28min</div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box--horizontal">
+                <div class="box box-vertical">
+                    <div class="box--content">
+                        <div class="box--item">
+
+                            <div class="box--item--image">
+                                <img src="/Uploads/icon/aaa" class="box--item--image" />
+                            </div>
+
+                            <div class="box--item--text">
+
+                                <div class="box--item--text">Current price:</div>
+                                <div class="box--item--price">$1929,99</div>
+                                <div class="box--item--text">Ends in:</div>
+                                <div class="box--item--date">3h 28min</div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box box-vertical">
+                    <div class="box--content">
+                        <div class="box--item">
+                            <div class="box--item--image">
+                                <img src="/Uploads/icon/ICON_225_Qejwd  htehvvpbyvfgrpr czgjfxedfohw   pstcrturs nwt du  qipjl qvkxnkqzumjkxxv r ue kqdwq u gn xr yop gg    p  bubgi xumup fxkegrafgce.jpg" />
+                            </div>
+
+                            <div class="box--item--text">
+
+                                <div class="box--item--text">Current price:</div>
+                                <div class="box--item--price">$1929,99</div>
+                                <div class="box--item--text">Ends in:</div>
+                                <div class="box--item--date">3h 28min</div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="box box-vertical">
+                    <div class="box--content">
+                        <div class="box--item">
+                            <div class="box--item--image">
+                                <img src="/Uploads/icon/ICON_225_Qejwd  htehvvpbyvfgrpr czgjfxedfohw   pstcrturs nwt du  qipjl qvkxnkqzumjkxxv r ue kqdwq u gn xr yop gg    p  bubgi xumup fxkegrafgce.jpg" />
+                            </div>
+
+                            <div class="box--item--text">
+
+                                <div class="box--item--text">Current price:</div>
+                                <div class="box--item--price">$1929,99</div>
+                                <div class="box--item--text">Ends in:</div>
+                                <div class="box--item--date">3h 28min</div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </diiv>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*
+<div class="userAccount--container">
 
     <div class="box--container">
 
@@ -17,7 +231,7 @@
             </div>
 
             <div class="box box--content box--center">
-                <a asp-action="Create" asp-controller="Auctions" class="button button--secondary button--rounded"> New Auction &nbsp &nbsp &nbsp &nbsp + </a>
+                <a asp-action="Create" asp-controller="Auctions" class="button button--secondary button--rounded"> New Auction  + </a>
             </div>
 
         </div>
@@ -66,7 +280,7 @@
                     Observed
                 </span>
                 <div class="box-shadow box--content">
-                    @*<hr />
+                    <hr />
                     <div class="box--item">
                         item 1
                     </div>
@@ -93,7 +307,7 @@
                     <hr />
                     <div class="box--item">
                         item 3
-                    </div>*@
+                    </div>
                 </div>
         
             </div>
@@ -124,25 +338,8 @@
                     </div>
                 </div>
             </div>
-
-
-
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-    
-
-
 </div>
 
-
-
+*@
