--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -356,16 +356,15 @@ input[type=file] {
 }
 
 
-/* Home Page css */
-.home--container {
+/* User Account css */
+.userAccount--container {
     display: flex;
     align-content: start;
-    
     align-items: flex-start;
     flex-wrap: wrap;
 }
 
-    .home--container .box--container {
+    .userAccount--container .box--container {
         display: inline;
         width: 100%;
         margin: 0;
@@ -375,51 +374,51 @@ input[type=file] {
         position: relative;
     }
 
-    .home--container .box {
+    .userAccount--container .box {
         width: auto;
         overflow: hidden;
     }
-        .home--container .box .box--text {
+        .userAccount--container .box .box--text {
             font-size: 2.5em;
             border: none;
         }
 
-            .home--container .box .box--content .box--item {
-                text-align: center;
-                margin: 2pt;
-                height: 10vh;
-                position: relative;
+        .userAccount--container .box .box--content .box--item {
+            text-align: center;
+            margin: 2pt;
+            height: 10vh;
+            position: relative;
+        }
+            .userAccount--container .box .box--content .box--item .box--item--title {
+                width: 60%;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                text-align: left;
+                float: left;
+                font-size: 1.7em;
             }
-                .home--container .box .box--content .box--item .box--item--title {
-                    width: 60%;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    text-align: left;
-                    float: left;
-                    font-size: 1.7em;
-                }
-                .home--container .box .box--content .box--item .box--item--price {
-                    width: 40%;
-                    float: left;    
-                    text-align: right;
-                    font-size: 1.7em;
-                }
-                .home--container .box .box--content .box--item .box--item--date {
-                    text-align: left;
-                    display: flex;
-                    position: absolute;
-                    bottom: 1pt;
-                    font-size: 0.8em;
-                    vertical-align: bottom;
-                }
-
-            .home--container .box .box--content hr {
-                margin: 0pt;
+            .userAccount--container .box .box--content .box--item .box--item--price {
+                width: 40%;
+                float: left;
+                text-align: right;
+                font-size: 1.7em;
+            }
+            .userAccount--container .box .box--content .box--item .box--item--date {
+                text-align: left;
+                display: flex;
+                position: absolute;
+                bottom: 1pt;
+                font-size: 0.8em;
+                vertical-align: bottom;
             }
 
+        .userAccount--container .box .box--content hr {
+            margin: 0pt;
+        }
 
 
-    .home--container .box--horizontal {
+
+    .box--horizontal {
         display: flex;
         width: 100%;
         height: auto;
@@ -427,35 +426,187 @@ input[type=file] {
         justify-content: space-evenly;
     }
 
-        .home--container .box--horizontal .box .box--content {
+        .box--horizontal .box .box--content {
             border: 2px solid #f1f1f1;
             justify-content: center;
         }
 
-        .home--container .box--horizontal .box--center {
+        .box--horizontal .box--center {
             text-align: center;
             display: flex;
             width: 15vw;
         }
 
-            .home--container .box--horizontal .box--center .button {
+            .box--horizontal .box--center .button {
                 width: 100%;
                 margin: 10pt auto;
-                text-align-last: justify;
+                text-align-last: center;
                 padding: 0 10pt 0 10pt;
                 text-decoration: none;
             }
-        
 
-    .home--container .box--vertical {
+
+    .box--vertical {
         float: left;
         margin: 5pt;
         flex: 1;
         position: relative;
     }
-    
-        .home--container .box--vertical .box--text {
+
+        .box--vertical .box--text {
             margin-left: 10pt;
             text-align: left;
             font-size: 1.8em;
         }
+
+
+
+
+/* Home page css */ 
+.home--container {
+    display: flex;
+    align-content: start;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+}
+
+    .home--container .nagigation--categories--container {
+        border: 2px solid #f1f1f1;
+        border-radius: 20pt;
+        float: left;
+        padding: 6pt;
+        width: 20%;
+        text-align: center;
+    }
+
+        .nagigation--categories--container hr {
+            border: 2pt solid #f1f1f1;
+            margin: 5pt 0 5pt 0;
+        }
+
+        .nagigation--categories--container .container--text {
+            margin-bottom: 6pt;
+            width: 100%;
+        }
+
+        .nagigation--categories--container .nav--item a{
+            width: 100%;
+            position: relative;
+            margin: 1pt 0 1pt 0;
+            text-decoration: none;
+        }
+
+            .nagigation--categories--container .nav--item .button {
+                height: 100%;
+                width: 100%;
+                display: block;
+                text-decoration: none;
+            }
+
+    .home--container .main--container {
+        border-radius: 20pt;
+        padding: 6pt;
+        width: 60vw;
+        margin: 0 10pt 0 10pt;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+        .main--container .box--container {
+            border: 2px solid #f1f1f1;
+            border-radius: 20pt;
+            padding: 6pt;
+            width: 92%;
+            display: flex;
+        }
+            .box--container .box--image{
+                float: left;
+                width: 50%
+            }
+
+            .box--container .box--image img{
+                width: 100%;
+                height: auto;
+                border-radius: 50pt;
+            }
+
+            .box--container .box--description {
+                display: flex;
+            }
+
+            .box--description .box--text{
+                
+            }
+
+
+        .main--container .bottom--box--container {
+            padding: 5pt 0 5pt 0;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .bottom--box--container .box--horizontal {
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        .main--container .bottom--box--container .box{
+            width: 90%;
+            justify-content: space-evenly;
+            margin: 0 5pt 0 5pt;
+        }
+
+            .bottom--box--container .box--horizontal {
+                margin-top: 15pt;
+            }
+
+            .box .box--content {
+                border-radius: 10pt;
+                display: block;
+                padding: 2pt;
+                box-shadow: -2pt 3pt 3pt #f1f1f1 ;
+                transition: all 0.5s ease-out;
+            }
+
+                .bottom--box--container .box .box--content:hover {
+                    border-radius: 10pt;
+                    padding: 2pt;
+                    transform: translate(-3pt, 3pt);
+                    box-shadow: none;
+                }
+
+
+            .box .box--content .box--item {
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+            }
+
+                .box .box--content .box--item--image img {
+                    width: 100%;
+                    height: auto;
+                    float: left;
+                    border-radius: 10pt;
+                }
+
+                .box .box--content .box--item--text {
+                    text-align: left;
+                    font-size: 11pt;
+                    margin: 0 0 0 2pt;
+                    color: #1669E6;
+                }
+
+                .box .box--content .box--item--price {
+                    text-align: right;
+                    color: #f1f1f1
+                }
+
+                .box .box--content .box--item--date {
+                    text-align: right;
+                    color: #f1f1f1
+                }
