--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -519,12 +519,17 @@ input[type=file] {
             border: 2px solid #f1f1f1;
             border-radius: 20pt;
             padding: 6pt;
-            width: 92%;
-            display: flex;
+            overflow: hidden;
+            min-height: 20vh;
         }
+            
+            .box--container .slide--item {
+                display: none;
+            }
+
             .box--container .box--image{
-                float: left;
-                width: 50%
+                width: 50%;
+                display: inline-block;
             }
 
             .box--container .box--image img{
@@ -534,30 +539,38 @@ input[type=file] {
             }
 
             .box--container .box--description {
-                display: flex;
+                width: 50%;
+                display: inline-block;
+                margin: 0;
             }
 
-            .box--description .box--text{
-                
-            }
+                .box--description .box--text{
+                    padding: 5pt 5pt 0 5pt;
+                    text-align: left;
+                    margin-left: 10pt;
+                }
+
+                .box--description .box--price {
+                    text-align: right;
+                }
+                .box--description .box--date {
+                    text-align: right;
+                }
 
 
         .main--container .bottom--box--container {
             padding: 5pt 0 5pt 0;
             width: 100%;
-            display: flex;
             flex-direction: column;
         }
 
         .bottom--box--container .box--horizontal {
             width: 100%;
-            margin: 0;
             padding: 0;
         }
 
         .main--container .bottom--box--container .box{
             width: 90%;
-            justify-content: space-evenly;
             margin: 0 5pt 0 5pt;
         }
 
@@ -610,3 +623,64 @@ input[type=file] {
                     text-align: right;
                     color: #f1f1f1
                 }
+
+
+
+.slide--container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+    text-align: center;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 10%;
+    width: auto;
+    margin-top: -22px;
+    padding: 6pt;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "prev button" to the left */
+.prev {
+    left: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover, .next:hover {
+        background-color: #f2f2f2;
+        border-radius: 40pt;
+    }
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 1
+    }
+}
