--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -48,59 +48,27 @@
 
             <div class="box--container">
 
-                <div class="slide--item fade">
-                    <div class="box--image">
-                        <img src="/Uploads/image/IMAGE_1032_aa.jpg" />
-                    </div>
 
-                    <div class="box--description">
-                        <div class="box--text">Selled for:</div>
-                        <div class="box--text box--price">$1929,99</div>
-                        <div class="box--text">Ended:</div>
-                        <div class="box--text box--date">23.11.2022 at 11.59 pm</div>
-                    </div>
-                </div>
-
-                    <div class="slide--item fade">
-                        <div class="box--image">
-                            <img src="/Uploads/image/IMAGE_1030_11.jpg" />
-                        </div>
-                
-                        <div class="box--description">
-                            <div class="box--text">Selled for:</div>
-                            <div class="box--text box--price">$19212129,99</div>
-                            <div class="box--text">Ended:</div>
-                            <div class="box--text box--date">23.11.2022 at 11.59 pm</div>
-                        </div>
-                    </div>
+                @foreach(var auction in ViewBag.RecentlyFinishedAuctions)
+                {
+                    string imageName = "IMAGE_" + auction.Auction.ProductId + "_" + auction.Auction.Product.Name + ".jpg";
+                    TimeSpan timeLeft = (TimeSpan)(auction.Auction.EndTime - DateTime.UtcNow);
 
 
                     <div class="slide--item fade">
                         <div class="box--image">
-                            <img src="/Uploads/image/IMAGE_1031_11.jpg" />
+                            <img src="/Uploads/image/@imageName" />
                         </div>
-                
+
                         <div class="box--description">
-                            <div class="box--text">Selled for:</div>
-                            <div class="box--text box--price">$19212129,99</div>
-                            <div class="box--text">Ended:</div>
-                            <div class="box--text box--date">23.11.2022 at 11.59 pm</div>
+                            <div class="text--primary box--text">Selled for:</div>
+                            <div class="text--secondary box--text box--price">@string.Format("{0:0.00} zł", auction.Bid)</div>
+                            <div class="text--primary box--text">Ended:</div>
+                            <div class="text--secondary box--text box--date">@auction.Auction.EndTime</div>
                         </div>
                     </div>
 
-
-                    <div class="slide--item fade">
-                        <div class="box--image">
-                        <img src="/Uploads/image/IMAGE_1033_111.jpg" />
-                        </div>
-                
-                        <div class="box--description">
-                            <div class="box--text">Selled for:</div>
-                            <div class="box--text box--price">$19212129,99</div>
-                            <div class="box--text">Ended:</div>
-                            <div class="box--text box--date">23.11.2022 at 11.59 pm</div>
-                        </div>
-                    </div>
+                }
 
             </div>
 
@@ -113,6 +81,7 @@
 
 
         <div class="bottom--box--container">
+            <hr/>
             <span class="box--text">
                 Maybe this will interest you:
             </span>
@@ -134,16 +103,17 @@
 
                                 <div class="box--content">
                                     <div class="box--item">
+
                                         <div class="box--item--image">
                                             <img src="/Uploads/icon/@iconName" />
                                         </div>
 
                                         <div class="box--item--text">
 
-                                            <div class="box--item--text">Current price:</div>
-                                            <div class="box--item--price">@string.Format("{0:0.00} zł", auctions[j].Bid)</div>
-                                            <div class="box--item--text">Ends in:</div>
-                                            <div class="box--item--date">@auctions[j].Auction.EndTime - end in @timeLeft.Days days</div>
+                                            <div class="text--primary box--item--text">Current price:</div>
+                                            <div class="text--secondary box--item--price">@string.Format("{0:0.00} zł", auctions[j].Bid)</div>
+                                            <div class="text--primary box--item--text">Ends in:</div>
+                                            <div class="text--secondary box--item--date">@auctions[j].Auction.EndTime - end in @timeLeft.Days days</div>
 
                                         </div>
                                     </div>
